--- a/Index.html
+++ b/Index.html
@@ -169,59 +169,59 @@
 		<button><img class="popup-arrow right-popup-arrow" src="Image/rightbutton.png" alt="Правая стрелка"></button>
     <div class="popup-content">
             <div class="popup-image-container" id="popup-image-container">
-                <img src="Image/101.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/102.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/103.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/104.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/105.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/106.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-				<img src="Image/201.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/202.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/203.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/204.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/205.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-				<img src="Image/206.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-				<img src="Image/301.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/302.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/303.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/304.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/305.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/306.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-				<img src="Image/401.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/402.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/403.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/404.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/405.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/406.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-				<img src="Image/407.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-				<img src="Image/501.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/502.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/503.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/504.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/505.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/506.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-				<img src="Image/507.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-				<img src="Image/508.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-				<img src="Image/601.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/602.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/603.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/604.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/605.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/606.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-				<img src="Image/607.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-				<img src="Image/701.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/702.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/703.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/704.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/705.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/706.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-				<img src="Image/707.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-				<img src="Image/801.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/802.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/803.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/804.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/805.jpg" alt="Дизайн интерьера" class="popup-slider-image">
-                <img src="Image/806.jpg" alt="Дизайн интерьера" class="popup-slider-image">
+                <img src="Image/101.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/102.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/103.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/104.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/105.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/106.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+				<img src="Image/201.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/202.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/203.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/204.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/205.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+				<img src="Image/206.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+				<img src="Image/301.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/302.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/303.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/304.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/305.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/306.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+				<img src="Image/401.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/402.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/403.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/404.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/405.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/406.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+				<img src="Image/407.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+				<img src="Image/501.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/502.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/503.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/504.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/505.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/506.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+				<img src="Image/507.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+				<img src="Image/508.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+				<img src="Image/601.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/602.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/603.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/604.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/605.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/606.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+				<img src="Image/607.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+				<img src="Image/701.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/702.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/703.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/704.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/705.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/706.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+				<img src="Image/707.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+				<img src="Image/801.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/802.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/803.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/804.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/805.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
+                <img src="Image/806.jpg" alt="Дизайн интерьера" class="popup-slider-image" loading="lazy">
             </div>
     	</div>
 	</div>
@@ -317,7 +317,7 @@
 		</div>
 		<div class="pricing-card">
 		  <div class="image-container">
-			<img src="Image/дизайн_интерьера_панорамма.gif" alt="Тариф Рич Бич">
+			<img src="Image/дизайн_интерьера_панорамма.gif" alt="Тариф Рич Бич" loading="lazy">
 		  </div>
 		  <p class="text3">РИЧ БИЧ</p>
 			<p class="decor non_plus">Планировочные решения <span class="italics">3 варианта</span><br>
@@ -364,7 +364,7 @@
         <!-- Первая карточка -->
         <div class="card-wrapper">
       <div class="card">
-        <img src="Image/Та_самая_авторский_надзор.png" alt="Картинка 1"><div class="card-title pos_rig">АВТОРСКИЙ НАДЗОР<br>Сделай сам, а мы подскажем!</div>
+        <img src="Image/Та_самая_авторский_надзор.png" alt="Картинка 1" loading="lazy"><div class="card-title pos_rig">АВТОРСКИЙ НАДЗОР<br>Сделай сам, а мы подскажем!</div>
       </div>
       <div class="text-wrapper">
         <div class="text-panel">
@@ -381,7 +381,7 @@
     <!-- Карточка 2 -->
     <div class="card-wrapper">
       <div class="card">
-        <img src="Image/Та_самая_менеджмент.png" alt="Картинка 2"><div class="card-title pos_lef">МЕНЕДЖМЕНТ<br>Мы сделаем все за тебя!</div>
+        <img src="Image/Та_самая_менеджмент.png" alt="Картинка 2" loading="lazy"><div class="card-title pos_lef">МЕНЕДЖМЕНТ<br>Мы сделаем все за тебя!</div>
       </div>
       <div class="text-wrapper">
         <div class="text-panel">
