--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,7 @@
 <meta property="og:locale" content="ru_RU">
 	
 <title>Студия дизайна интерьера в СПб и Москве - ТА САМАЯ</title>
+	<link rel="preload" as="image" href="Image/logo.png">	
 	<link rel="stylesheet" href="Style/normalize.css">
 	<link rel="stylesheet" href="Style/Style1.css">
 	<link rel="stylesheet" href="Style/Style2.css">
