--- a/Index.html
+++ b/Index.html
@@ -365,7 +365,11 @@
         <!-- Первая карточка -->
         <div class="card-wrapper">
       <div class="card">
-        <img src="Image/Та_самая_авторский_надзор.png" alt="Картинка 1" loading="lazy"><div class="card-title pos_rig">АВТОРСКИЙ НАДЗОР<br>Сделай сам, а мы подскажем!</div>
+		<picture>
+			<source srcset="Image/Та_самая_авторский_надзор.webp" type="image/webp">
+        	<img src="Image/Та_самая_авторский_надзор.png" alt="Картинка 1" loading="lazy">
+		</picture>
+		<div class="card-title pos_rig">АВТОРСКИЙ НАДЗОР<br>Сделай сам, а мы подскажем!</div>
       </div>
       <div class="text-wrapper">
         <div class="text-panel">
@@ -382,7 +386,11 @@
     <!-- Карточка 2 -->
     <div class="card-wrapper">
       <div class="card">
-        <img src="Image/Та_самая_менеджмент.png" alt="Картинка 2" loading="lazy"><div class="card-title pos_lef">МЕНЕДЖМЕНТ<br>Мы сделаем все за тебя!</div>
+		<picture>
+			<source srcset="Image/Та_самая_менеджмент.webp" type="image/webp">
+        	<img src="Image/Та_самая_менеджмент.png" alt="Картинка 2" loading="lazy">
+		</picture>
+		<div class="card-title pos_lef">МЕНЕДЖМЕНТ<br>Мы сделаем все за тебя!</div>
       </div>
       <div class="text-wrapper">
         <div class="text-panel">
@@ -393,7 +401,7 @@
 	</div>
 	
 	<div class="The_form">
-    <img class="photo2" src="Image/Та_самая_интерьер.jpg" alt="Дизайн интерера">
+	<img class="photo2" src="Image/Та_самая_интерьер.jpg" alt="Дизайн интерера">
     <form id="myForm3" class="colum">
         <h3>ЗАКАЗАТЬ ДИЗАЙН ПРОЕКТ</h3>
         <input class="dop_color" type="text" id="name3" name="name" placeholder="Ваше имя" required>
