--- a/Index.html
+++ b/Index.html
@@ -102,7 +102,7 @@
     		<div class="row_for_titile"><h1 class="hidden-h1">Та самая <br>студия дизайна интерьера</h1>
 				<img class="for_title2" src="Image/titles.png" alt="Дизайн интерьера – ТА САМАЯ" aria-hidden="true">
 				</div>
-			<img class="new_bac" src="Style/TitlePhoto2.png" alt="Дизайн интерьера – ТА САМАЯ">
+				<img class="new_bac" src="Style/TitlePhoto2.jpg" alt="Дизайн интерьера – ТА САМАЯ">
 			<div class="main-content p">
       				<h2 class="text1">Дизайн, который решает сложные задачи</h2>
       				<p class="text2">Ваша идея —&nbspэто&nbspнаш&nbspвызов! Мы —&nbspстудия дизайна интерьеров, <br>специализирующаяся на&nbspсложных и&nbspнестандартных проектах.</p>
