--- a/Index.html
+++ b/Index.html
@@ -367,7 +367,7 @@
       <div class="card">
 		<picture>
 			<source srcset="Image/Та_самая_авторский_надзор.webp" type="image/webp">
-        	<img src="Image/Та_самая_авторский_надзор.png" alt="Картинка 1" loading="lazy">
+        	<img src="Image/Та_самая_авторский_надзор.jpg" alt="Картинка 1" loading="lazy">
 		</picture>
 		<div class="card-title pos_rig">АВТОРСКИЙ НАДЗОР<br>Сделай сам, а мы подскажем!</div>
       </div>
@@ -388,7 +388,7 @@
       <div class="card">
 		<picture>
 			<source srcset="Image/Та_самая_менеджмент.webp" type="image/webp">
-        	<img src="Image/Та_самая_менеджмент.png" alt="Картинка 2" loading="lazy">
+        	<img src="Image/Та_самая_менеджмент.jpg" alt="Картинка 2" loading="lazy">
 		</picture>
 		<div class="card-title pos_lef">МЕНЕДЖМЕНТ<br>Мы сделаем все за тебя!</div>
       </div>
